--- a/src/main/webapp/app/exam/participate/exercises/programming/code-editor/exam-code-editor-student-container.component.html
+++ b/src/main/webapp/app/exam/participate/exercises/programming/code-editor/exam-code-editor-student-container.component.html
@@ -23,6 +23,7 @@
             [(commitState)]="commitState"
             (onSavedFiles)="onSavedFiles($event)"
             (onError)="onError($event)"
+            (onRefreshFiles)="onRefreshFiles()"
             (commitStateChange)="onCommitStateChange($event)"
         ></jhi-code-editor-actions>
     </div>
