add input to include angular check if submission changes

--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -64,7 +64,11 @@
             <ng-container *ngIf="getParticipationForExercise(exercise) && getSubmissionForExercise(exercise)">
                 <!-- Programming Exercise -->
                 <ng-container *ngIf="exercise.type === PROGRAMMING">
-                    <jhi-programming-exam-summary [exercise]="exercise" [participation]="getParticipationForExercise(exercise)"></jhi-programming-exam-summary>
+                    <jhi-programming-exam-summary
+                        [exercise]="exercise"
+                        [participation]="getParticipationForExercise(exercise)"
+                        [submission]="getSubmissionForExercise(exercise)"
+                    ></jhi-programming-exam-summary>
                 </ng-container>
             </ng-container>
             <ng-template #noSubmission>
