--- a/src/main/webapp/app/exam/manage/exams/exam-update.component.html
+++ b/src/main/webapp/app/exam/manage/exams/exam-update.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <div class="col-8">
+    <div class="col">
         <form name="editForm" role="form" #editForm="ngForm" (ngSubmit)="save()">
             <div *ngIf="!exam.id; else edit">
                 <h4>{{ 'artemisApp.examManagement.createExam' | translate }}</h4>
@@ -53,6 +53,7 @@
                     ></jhi-date-time-picker>
                 </div>
             </div>
+
             <div class="form-row mb-3">
                 <div class="col-sm-4">
                     <jhi-date-time-picker
@@ -78,6 +79,11 @@
                         id="examStudentReviewEnd"
                     ></jhi-date-time-picker>
                 </div>
+            </div>
+
+            <div class="form-row mb-3">
+                <label class="form-check-label" for="maxPoints" jhiTranslate="artemisApp.examManagement.gracePeriod">Grace period (seconds)</label>
+                <input id="gracePeriod" name="gracePeriod" class="form-control" type="number" min="0" [(ngModel)]="exam.gracePeriod" />
             </div>
 
             <div class="form-row mb-3">
