--- a/src/main/webapp/app/exam/manage/exams/exam-update.component.html
+++ b/src/main/webapp/app/exam/manage/exams/exam-update.component.html
@@ -82,8 +82,10 @@
             </div>
 
             <div class="form-row mb-3">
-                <label class="form-check-label" for="maxPoints" jhiTranslate="artemisApp.examManagement.gracePeriod">Grace period (seconds)</label>
-                <input id="gracePeriod" name="gracePeriod" class="form-control" type="number" min="0" [(ngModel)]="exam.gracePeriod" />
+                <div class="col">
+                    <label class="form-check-label" for="maxPoints" jhiTranslate="artemisApp.examManagement.gracePeriod">Grace period (seconds)</label>
+                    <input id="gracePeriod" name="gracePeriod" class="form-control" type="number" min="0" [(ngModel)]="exam.gracePeriod" />
+                </div>
             </div>
 
             <div class="form-row mb-3">
