--- a/src/main/webapp/app/exam/manage/exams/exam-update.component.html
+++ b/src/main/webapp/app/exam/manage/exams/exam-update.component.html
@@ -24,6 +24,22 @@
                     <input class="form-control" required type="text" name="title" id="title" [(ngModel)]="exam.title" />
                 </div>
             </div>
+
+            <div class="form-row">
+                <div class="col-sm-4 form-group">
+                    <label class="form-check-label" for="examiner" jhiTranslate="artemisApp.examManagement.examiner">Examiner</label>
+                    <input class="form-control" type="text" name="examiner" id="examiner" [(ngModel)]="exam.examiner" />
+                </div>
+                <div class="col-sm-4 form-group">
+                    <label class="form-check-label" for="moduleNumber" jhiTranslate="artemisApp.examManagement.moduleNumber">Module number</label>
+                    <input class="form-control" type="text" name="moduleNumber" id="moduleNumber" [(ngModel)]="exam.moduleNumber" />
+                </div>
+                <div class="col-sm-4 form-group">
+                    <label class="form-check-label" for="courseName" jhiTranslate="artemisApp.examManagement.courseName">Course name</label>
+                    <input class="form-control" type="text" name="courseName" id="courseName" [(ngModel)]="exam.courseName" />
+                </div>
+            </div>
+
             <div class="form-row mb-3">
                 <div class="col-sm-4">
                     <jhi-date-time-picker
@@ -81,11 +97,9 @@
                 </div>
             </div>
 
-            <div class="form-row mb-3">
-                <div class="col">
-                    <label class="form-check-label" for="maxPoints" jhiTranslate="artemisApp.examManagement.gracePeriod">Grace period (seconds)</label>
-                    <input id="gracePeriod" name="gracePeriod" class="form-control" type="number" min="0" [(ngModel)]="exam.gracePeriod" />
-                </div>
+            <div class="mb-3">
+                <label class="form-check-label" for="gracePeriod" jhiTranslate="artemisApp.examManagement.gracePeriod">Grace period (seconds)</label>
+                <input id="gracePeriod" name="gracePeriod" class="form-control" type="number" min="0" [(ngModel)]="exam.gracePeriod" />
             </div>
 
             <div class="form-row mb-3">
