--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -23,8 +23,8 @@
                 <jhi-alert></jhi-alert>
             </div>
             <!-- exercises -->
-            <ng-container *ngIf="activeExercise.studentParticipations && activeExercise.studentParticipations[0]">
-                <ng-container *ngFor="let exercise of studentExam.exercises; let i = index">
+            <ng-container *ngFor="let exercise of studentExam.exercises; let i = index">
+                <ng-container *ngIf="exercise.studentParticipations && exercise.studentParticipations[0]">
                     <ng-container *ngIf="submissionComponentVisited[i]">
                         <ng-container [ngSwitch]="exercise.type">
                             <div [hidden]="i !== activeExerciseIndex">
