--- a/src/main/webapp/app/complaints/complaints.component.html
+++ b/src/main/webapp/app/complaints/complaints.component.html
@@ -1,5 +1,5 @@
 <div class="col-12 mt-4">
-    <jhi-alert></jhi-alert>
+    <jhi-alert *ngIf="!examId"></jhi-alert>
     <div class="row">
         <div class="col-12">
             <h3>{{ complaintType === ComplaintType.MORE_FEEDBACK ? ('artemisApp.moreFeedback.title' | translate) : ('artemisApp.complaint.title' | translate) }}</h3>
