Propagate a stub exam with only the id and review period dates

--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -74,7 +74,7 @@
                     class="mb-2 mt-2 ml-3"
                     [exercise]="exercise"
                     [participation]="getParticipationForExercise(exercise)"
-                    [exam]="studentExam.exam"
+                    [exam]="examWithOnlyIdAndStudentReviewPeriod"
                 >
                 </jhi-complaint-interactions>
             </ng-container>
