--- a/src/main/webapp/app/exam/participate/summary/exercises/modeling-exam-summary/modeling-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/modeling-exam-summary/modeling-exam-summary.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="umlModel; else noSubmission">
+<div *ngIf="umlModel; else noSubmission" class="editor-outline-background">
     <jhi-modeling-editor [readOnly]="true" [diagramType]="exercise.diagramType || null" [umlModel]="umlModel"></jhi-modeling-editor>
 </div>
 <ng-template #noSubmission>
