--- a/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
@@ -9,7 +9,7 @@
             [question]="question"
             [(selectedAnswerOptions)]="selectedAnswerOptions[question.id]"
             [clickDisabled]="true"
-            [showResult]="resultsPublished"
+            [showResult]="resultsPublished && !showMissingResultsNotice"
             [submittedQuizExercise]="exercise"
             [submittedResult]="exercise.studentParticipations[0].results[0]"
             [forceSampleSolution]="false"
@@ -22,7 +22,7 @@
             [question]="question"
             [(mappings)]="dragAndDropMappings[question.id]"
             [clickDisabled]="true"
-            [showResult]="resultsPublished"
+            [showResult]="resultsPublished && !showMissingResultsNotice"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
             [score]="getScoreForQuizQuestion(question.id)"
@@ -33,7 +33,7 @@
             [question]="question"
             [(submittedTexts)]="shortAnswerSubmittedTexts[question.id]"
             [clickDisabled]="true"
-            [showResult]="resultsPublished"
+            [showResult]="resultsPublished && !showMissingResultsNotice"
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
             [score]="getScoreForQuizQuestion(question.id)"
