--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -1,14 +1,19 @@
 <div class="w-100 d-flex" *ngIf="!startView">
     <div class="col-md-3"></div>
     <h2 class="col-md-6" style="text-align: center;">
-        <span>{{
-            'artemisApp.examParticipation.finish'
-                | translate
-                    : {
-                          title: exam.title,
-                          fullName: accountName
-                      }
-        }}</span>
+        <span
+            >{{
+                'artemisApp.examParticipation.finish'
+                    | translate
+                        : {
+                              title: exam.title,
+                              fullName: accountName
+                          }
+            }}
+        </span>
+        <span style="color: blue;">
+            {{ accountName }}
+        </span>
     </h2>
     <jhi-exam-timer class="col-md-3 justify-content-end" [endDate]="graceEndDate" [criticalTime]="criticalTime"></jhi-exam-timer>
 </div>
@@ -28,6 +33,9 @@
                           fullName: accountName
                       }
         }}</span>
+        <span style="color: blue;">
+            {{ accountName }}
+        </span>
     </h2>
     <div class="mt-3 mb-4 text-center">
         <div class="mb-2">
@@ -95,11 +103,12 @@
             <div class="row justify-content-center">
                 <div class="form-group">
                     <input
+                        size="50"
                         type="text"
                         class="form-control"
                         name="fullname"
                         id="fullname"
-                        placeholder="Name"
+                        [placeholder]="'artemisApp.examParticipation.namePlaceholder' | translate"
                         [(ngModel)]="enteredName"
                         [ngModelOptions]="{ updateOn: 'change' }"
                         [disabled]="startView ? waitingForExamStart : false"
