--- a/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
+++ b/src/main/webapp/app/exam/participate/exam-cover/exam-participation-cover.component.html
@@ -6,7 +6,7 @@
                 'artemisApp.examParticipation.finish'
                     | translate
                         : {
-                              title: exam.title,
+                              title: exam.title
                           }
             }}
         </span>
@@ -28,7 +28,7 @@
             'artemisApp.examParticipation.greeting'
                 | translate
                     : {
-                          title: exam.title,
+                          title: exam.title
                       }
         }}</span>
         <span style="color: blue;">
