--- a/src/main/webapp/app/exam/participate/information/exam-information.component.html
+++ b/src/main/webapp/app/exam/participate/information/exam-information.component.html
@@ -1,10 +1,10 @@
 <div class="mt-3 mb-4 text-center">
     <div class="mb-2">
-        <span class="mx-2" *ngIf="exam.startDate">
+        <span class="mx-2" *ngIf="exam && exam.startDate">
             <strong class="font-weight-bold">{{ 'artemisApp.exam.date' | translate }}:</strong>
             {{ exam.startDate | artemisDate: 'long-date' }}
         </span>
-        <span class="mx-2">
+        <span class="mx-2" *ngIf="exam">
             <strong class="font-weight-bold">{{ 'artemisApp.exam.time' | translate }}:</strong>
             {{ exam.startDate | artemisDate: 'time' }}
             -
@@ -15,7 +15,7 @@
             {{ studentExam.workingTime | artemisDurationFromSeconds }}
         </span>
     </div>
-    <div class="mb-2" *ngIf="exam.examiner || exam.moduleNumber || exam.courseName">
+    <div class="mb-2" *ngIf="exam && (exam.examiner || exam.moduleNumber || exam.courseName)">
         <span class="mx-2" *ngIf="exam.examiner">
             <strong class="font-weight-bold">{{ 'artemisApp.examManagement.examiner' | translate }}:</strong>
             {{ exam.examiner }}
@@ -29,12 +29,12 @@
             {{ exam.courseName }}
         </span>
     </div>
-    <div>
-        <span class="mx-2">
+    <div *ngIf="exam && (exam.numberOfExercisesInExam || exam.maxPoints)">
+        <span class="mx-2" *ngIf="exam.numberOfExercisesInExam">
             <strong class="font-weight-bold">{{ 'artemisApp.exam.exercises' | translate }}:</strong>
             {{ exam.numberOfExercisesInExam }}
         </span>
-        <span class="mx-2">
+        <span class="mx-2" *ngIf="exam.maxPoints">
             <strong class="font-weight-bold">{{ 'artemisApp.exam.points' | translate }}:</strong>
             {{ exam.maxPoints }}
         </span>
