--- a/src/main/webapp/app/exam/manage/exams/exam-update.component.html
+++ b/src/main/webapp/app/exam/manage/exams/exam-update.component.html
@@ -75,6 +75,7 @@
                     <jhi-date-time-picker
                         labelName="{{ 'artemisApp.examManagement.publishResultsDate' | translate }}"
                         [(ngModel)]="exam.publishResultsDate"
+                        [error]="!isValidPublishResultsDate"
                         name="publishResultsDate"
                         id="publishResultsDate"
                     ></jhi-date-time-picker>
@@ -83,6 +84,7 @@
                     <jhi-date-time-picker
                         labelName="{{ 'artemisApp.examManagement.examStudentReviewStart' | translate }}"
                         [(ngModel)]="exam.examStudentReviewStart"
+                        [error]="!isValidExamStudentReviewStart"
                         name="examStudentReviewStart"
                         id="examStudentReviewStart"
                     ></jhi-date-time-picker>
@@ -91,6 +93,7 @@
                     <jhi-date-time-picker
                         labelName="{{ 'artemisApp.examManagement.examStudentReviewEnd' | translate }}"
                         [(ngModel)]="exam.examStudentReviewEnd"
+                        [error]="!isValidExamStudentReviewEnd"
                         name="examStudentReviewEnd"
                         id="examStudentReviewEnd"
                     ></jhi-date-time-picker>
@@ -140,7 +143,7 @@
                 <button type="button" class="btn btn-secondary" (click)="previousState()">
                     <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel"> Cancel</span>
                 </button>
-                <button type="submit" [disabled]="editForm.form.invalid || !isValidEndDate || isSaving" class="btn btn-primary">
+                <button type="submit" [disabled]="editForm.form.invalid || !isValidConfiguration || isSaving" class="btn btn-primary">
                     <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
                 </button>
             </div>
