Add button for re-evaluate quiz. Only show the button if the exam is over

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -139,8 +139,8 @@
                         <td class="d-flex justify-content-end">
                             <jhi-exam-exercise-row-buttons
                                 [course]="course"
+                                [exam]="exam"
                                 [exercise]="exercise"
-                                [examId]="examId"
                                 [exerciseGroupId]="exerciseGroup.id"
                                 (onDeleteExercise)="loadExerciseGroups()"
                             ></jhi-exam-exercise-row-buttons>
