--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -13,6 +13,10 @@
     </h2>
 </div>
 <jhi-exam-information [exam]="studentExam.exam" [studentExam]="studentExam"></jhi-exam-information>
+<div class="mb-5" *ngIf="studentExam && studentExam.exercises">
+    <jhi-exam-points-summary [exercises]="studentExam.exercises"></jhi-exam-points-summary>
+</div>
+<h4 class="mb-0">{{ 'artemisApp.exam.exercises' | translate }}</h4>
 <div *ngFor="let exercise of studentExam.exercises; let i = index">
     <div class="question card">
         <div class="question-options card-header question-card-header">
