--- a/src/main/webapp/app/exercises/quiz/manage/re-evaluate/quiz-re-evaluate.component.html
+++ b/src/main/webapp/app/exercises/quiz/manage/re-evaluate/quiz-re-evaluate.component.html
@@ -1,6 +1,7 @@
 <div class="container" *ngIf="quizExercise">
     <h1>
-        <span jhiTranslate="artemisApp.quizExercise.re-evaluate.title" [translateValues]="{ param: quizExercise.course?.title }"> </span>
+        <span jhiTranslate="artemisApp.quizExercise.re-evaluate.title" [translateValues]="{ param: quizExercise.course?.title || quizExercise.exerciseGroup?.exam?.course?.title }">
+        </span>
     </h1>
     <hr />
 
