Prevent all possible null pointer / index out of bound exceptions

--- a/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
@@ -1,5 +1,5 @@
 <div class="quiz-content container">
-    <div class="alert alert-info mb-2" *ngIf="showMissingResultsNotice">
+    <div class="alert alert-info mb-2" *ngIf="showMissingResultsNotice()">
         {{ 'artemisApp.exam.examSummary.missingResultNotice' | translate }}
     </div>
     <div *ngFor="let question of quizQuestions; let i = index">
