Start exercise count with 1 instead of 0

--- a/src/main/webapp/app/exam/participate/summary/points-summary/exam-points-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/points-summary/exam-points-summary.component.html
@@ -11,7 +11,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let exercise of exercises; let i = index">
-                <th scope="row">{{ i }}</th>
+                <th scope="row">{{ i + 1 }}</th>
                 <td>
                     <span *ngIf="exercise.title">{{ exercise.title }}</span>
                 </td>
