Rename "Your points" to "Overview"

--- a/src/main/webapp/app/exam/participate/summary/points-summary/exam-points-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/points-summary/exam-points-summary.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="show()" style="max-width: 980px;">
-    <h4>{{ 'artemisApp.exam.examSummary.points.yourPoints' | translate }}</h4>
+    <h4>{{ 'artemisApp.exam.examSummary.points.overview' | translate }}</h4>
     <table class="table table-striped">
         <thead>
             <tr>
