Use latestIndividualEndDate to decide whether to render re-evaluate button

--- a/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
+++ b/src/main/webapp/app/exam/manage/exercise-groups/exercise-groups.component.html
@@ -139,9 +139,10 @@
                         <td class="d-flex justify-content-end">
                             <jhi-exam-exercise-row-buttons
                                 [course]="course"
-                                [exam]="exam"
+                                [examId]="exam.id"
                                 [exercise]="exercise"
                                 [exerciseGroupId]="exerciseGroup.id"
+                                [latestIndividualEndDate]="latestIndividualEndDate"
                                 (onDeleteExercise)="loadExerciseGroups()"
                             ></jhi-exam-exercise-row-buttons>
                         </td>
