Just to be sure: check for quizQuestions

--- a/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
@@ -1,4 +1,4 @@
-<div class="quiz-content container">
+<div class="quiz-content container" *ngIf="quizQuestions && quizQuestions.length > 0">
     <div class="alert alert-info mb-2" *ngIf="showMissingResultsNotice()">
         {{ 'artemisApp.exam.examSummary.missingResultNotice' | translate }}
     </div>
