--- a/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exercises/quiz-exam-summary/quiz-exam-summary.component.html
@@ -11,7 +11,9 @@
             [clickDisabled]="true"
             [showResult]="resultsPublished && !showMissingResultsNotice"
             [submittedQuizExercise]="exercise"
-            [submittedResult]="exercise.studentParticipations[0].results[0]"
+            [submittedResult]="
+                exercise.studentParticipations[0]?.results && exercise.studentParticipations[0]?.results.length > 0 ? exercise.studentParticipations[0].results[0] : null
+            "
             [forceSampleSolution]="false"
             [questionIndex]="i + 1"
             [score]="getScoreForQuizQuestion(question.id)"
