dont show request feedback in exam mode

--- a/src/main/webapp/app/complaints/complaint-interactions.component.html
+++ b/src/main/webapp/app/complaints/complaint-interactions.component.html
@@ -11,6 +11,7 @@
             {{ 'artemisApp.complaint.moreInfo' | translate }}
         </button>
         <button
+            *ngIf="!isExamMode"
             class="btn btn-primary ml-1"
             [class.not-allowed]="!isTimeOfComplaintValid"
             (click)="toggleRequestMoreFeedbackForm()"
