fix complaints in course exercises

--- a/src/main/webapp/app/complaints/complaint-interactions.component.html
+++ b/src/main/webapp/app/complaints/complaint-interactions.component.html
@@ -27,7 +27,7 @@
             class="flex-grow-1"
             [exercise]="exercise"
             [resultId]="result?.id"
-            [examId]="exam.id"
+            [examId]="exam?.id"
             [allowedComplaints]="numberOfAllowedComplaints"
             [maxComplaintsPerCourse]="calculateMaxComplaints()"
             [complaintType]="ComplaintType.COMPLAINT"
