--- a/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/exam-participation-summary.component.html
@@ -33,7 +33,11 @@
         </div>
         <div class="card-body question-card-body" [ngbCollapse]="isCollapsed(exercise.id)">
             <div *ngIf="exercise.type !== QUIZ && exercise.type !== PROGRAMMING && resultsPublished">
-                <button class="btn btn-primary float-right" [routerLink]="generateLink(exercise)">
+                <button
+                    *ngIf="exercise.studentParticipations && exercise.studentParticipations.length > 0"
+                    class="btn btn-primary float-right"
+                    [routerLink]="generateLink(exercise)"
+                >
                     <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon><span jhiTranslate="artemisApp.exam.examSummary.viewResult">&nbsp;View Result</span>
                 </button>
             </div>
