--- a/src/main/webapp/app/exercises/quiz/shared/questions/drag-and-drop-question/drag-and-drop-question.component.scss
+++ b/src/main/webapp/app/exercises/quiz/shared/questions/drag-and-drop-question/drag-and-drop-question.component.scss
@@ -36,6 +36,8 @@
 
             .click-layer {
                 @include position-style(absolute, 0, 0, 0, 0, 1);
+                width: 100%;
+                height: 100%;
 
                 /* dotted drop-location */
                 .drop-location {
