--- a/src/main/webapp/app/exercises/quiz/manage/drag-and-drop-question/drag-and-drop-question-edit.component.scss
+++ b/src/main/webapp/app/exercises/quiz/manage/drag-and-drop-question/drag-and-drop-question-edit.component.scss
@@ -96,6 +96,8 @@
         .click-layer {
             cursor: crosshair !important;
             @include position-style(absolute, 0, 0, 0, 0, 1);
+            width: 100%;
+            height: 100%;
 
             /* medium-purple dotted drop-location */
             .drop-location {
