--- a/src/main/webapp/app/exercises/quiz/manage/drag-and-drop-question/drag-and-drop-question-edit.component.html
+++ b/src/main/webapp/app/exercises/quiz/manage/drag-and-drop-question/drag-and-drop-question-edit.component.html
@@ -150,11 +150,7 @@
             <span jhiTranslate="artemisApp.dragAndDropQuestion.drawOnBackgroundInstructions"></span>
         </div>
         <div class="background-area">
-            <jhi-secured-image
-                *ngIf="question.backgroundFilePath"
-                [src]="question.backgroundFilePath"
-                [alt]="'artemisApp.dragAndDropQuestion.noBackgroundPicture' | translate"
-            >
+            <jhi-secured-image *ngIf="question.backgroundFilePath" [src]="question.backgroundFilePath" [alt]="'artemisApp.dragAndDropQuestion.noBackgroundPicture' | translate">
             </jhi-secured-image>
             <div
                 #clickLayer
