fix for small images

--- a/src/main/webapp/app/exercises/quiz/manage/drag-and-drop-question/drag-and-drop-question-edit.component.scss
+++ b/src/main/webapp/app/exercises/quiz/manage/drag-and-drop-question/drag-and-drop-question-edit.component.scss
@@ -87,6 +87,7 @@
 
     .background-area {
         position: relative;
+        margin: auto;
         @include user-select(none);
 
         img {
