fix layout for small images in questions component

--- a/src/main/webapp/app/exercises/quiz/shared/questions/drag-and-drop-question/drag-and-drop-question.component.scss
+++ b/src/main/webapp/app/exercises/quiz/shared/questions/drag-and-drop-question/drag-and-drop-question.component.scss
@@ -22,7 +22,8 @@
         justify-content: center;
 
         @media (max-width: 1199.98px) {
-            display: block;
+            flex-direction: column;
+            align-items: center;
         }
 
         /* background image and click-layer styles */
