Always return 0 for achieved points if no / empty submission or no / empty result

--- a/src/main/webapp/app/exam/participate/summary/points-summary/exam-points-summary.component.html
+++ b/src/main/webapp/app/exam/participate/summary/points-summary/exam-points-summary.component.html
@@ -16,7 +16,7 @@
                     <span *ngIf="exercise.title">{{ exercise.title }}</span>
                 </td>
                 <td>
-                    {{ calculateAchievedPointsForExercise(exercise) }}
+                    {{ calculateAchievedPoints(exercise) }}
                 </td>
                 <td>
                     <span *ngIf="exercise.maxScore">{{ exercise.maxScore }}</span>
