--- a/src/main/webapp/app/complaints/complaint-interactions.component.html
+++ b/src/main/webapp/app/complaints/complaint-interactions.component.html
@@ -11,6 +11,7 @@
             {{ 'artemisApp.complaint.moreInfo' | translate }}
         </button>
         <button
+            *ngIf="!isExamMode"
             class="btn btn-primary ml-1"
             [class.not-allowed]="!isTimeOfComplaintValid"
             (click)="toggleRequestMoreFeedbackForm()"
@@ -26,7 +27,7 @@
             class="flex-grow-1"
             [exercise]="exercise"
             [resultId]="result?.id"
-            [examId]="exam.id"
+            [examId]="exam?.id"
             [allowedComplaints]="numberOfAllowedComplaints"
             [maxComplaintsPerCourse]="calculateMaxComplaints()"
             [complaintType]="ComplaintType.COMPLAINT"
