Pass exercise index back when student decides to continue

--- a/src/main/webapp/app/exam/participate/exam-participation.component.html
+++ b/src/main/webapp/app/exam/participate/exam-participation.component.html
@@ -14,6 +14,7 @@
             <jhi-exam-navigation-bar
                 id="exam-navigation-bar"
                 [exercises]="studentExam.exercises"
+                [exerciseIndex]="exerciseIndex"
                 [endDate]="individualStudentEndDate"
                 (onExerciseChanged)="onExerciseChange($event)"
                 (examAboutToEnd)="examEnded()"
