--- a/src/main/webapp/app/exercises/shared/exam-exercise-row-buttons/exam-exercise-row-buttons.component.html
+++ b/src/main/webapp/app/exercises/shared/exam-exercise-row-buttons/exam-exercise-row-buttons.component.html
@@ -98,6 +98,16 @@
     </button>
 
     <button
+        *ngIf="course.isAtLeastInstructor && isExamOver() && exercise.type === exerciseType.QUIZ"
+        type="submit"
+        [routerLink]="['/course-management', course.id, 'quiz-exercises', exercise.id, 're-evaluate']"
+        class="btn btn-primary btn-sm mr-1"
+    >
+        <fa-icon [icon]="'pencil-alt'"></fa-icon>
+        <span class="d-none d-md-inline" jhiTranslate="entity.action.re-evaluate">Re-evaluate</span>
+    </button>
+
+    <button
         *ngIf="course.isAtLeastInstructor"
         type="submit"
         [routerLink]="['/course-management', course.id, 'exams', examId, 'exercise-groups', exerciseGroupId, exercise.type + '-exercises', exercise.id, 'edit']"
