--- a/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-update.component.html
+++ b/src/main/webapp/app/exercises/modeling/manage/modeling-exercise-update.component.html
@@ -98,7 +98,10 @@
                 <option value="DeploymentDiagram">{{ 'artemisApp.DiagramType.DeploymentDiagram' | translate }}</option>
             </select>
         </div>
-        <div class="form-group" *ngIf="this.modelingExercise.diagramType === DiagramType.ClassDiagram || this.modelingExercise.diagramType === DiagramType.ActivityDiagram">
+        <div
+            class="form-group"
+            *ngIf="!isExamMode && (this.modelingExercise.diagramType === DiagramType.ClassDiagram || this.modelingExercise.diagramType === DiagramType.ActivityDiagram)"
+        >
             <div class="form-check custom-control custom-checkbox">
                 <input
                     type="checkbox"
