--- a/src/main/webapp/app/exercises/shared/team/team-participation-table/team-participation-table.component.html
+++ b/src/main/webapp/app/exercises/shared/team/team-participation-table/team-participation-table.component.html
@@ -185,14 +185,22 @@
                 </ng-template>
                 <ng-template ngx-datatable-cell-template let-value="row">
                     <ng-container *ngIf="value.type !== ExerciseType.PROGRAMMING; else programmingAssessment">
-                        <button
-                            [disabled]="assessmentButtonDisabled(value, value.submission)"
-                            (click)="openAssessmentEditor(value, value.submission)"
-                            class="btn btn-warning btn-sm"
-                        >
-                            <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>
-                            <span [jhiTranslate]="'artemisApp.tutorExerciseDashboard.' + assessmentAction(value.submission) + 'Assessment'"></span>
-                        </button>
+                        <div class="d-flex justify-content-start align-items-center">
+                            <button
+                                [disabled]="assessmentButtonDisabled(value, value.submission)"
+                                (click)="openAssessmentEditor(value, value.submission)"
+                                class="btn btn-warning btn-sm"
+                            >
+                                <fa-icon [icon]="'folder-open'" [fixedWidth]="true"></fa-icon>
+                                <span [jhiTranslate]="'artemisApp.tutorExerciseDashboard.' + assessmentAction(value.submission) + 'Assessment'"></span>
+                            </button>
+                            <fa-icon
+                                class="mx-3"
+                                *ngIf="value.submission.result.hasComplaint"
+                                [icon]="'flag'"
+                                ngbTooltip="{{ 'artemisApp.team.detail.participationsTable.complaintOrMoreFeedbackRequest' | translate }}"
+                            ></fa-icon>
+                        </div>
                     </ng-container>
                     <ng-template #programmingAssessment>
                         <jhi-programming-assessment-manual-result
